--- a/index.html
+++ b/index.html
@@ -4,10 +4,55 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      rel="stylesheet"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link href="./css/style.css" rel="stylesheet" />
     <title>CVResume</title>
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <div class="header__wrapper">
+        <nav>
+          <ul class="navigation-list">
+            <li class="navigation-list__item">
+              <a href="#">Home</a>
+            </li>
+            <li class="navigation-list__item">
+              <a href="#">About</a>
+            </li>
+            <li class="navigation-list__item">
+              <a href="#">Portfolio</a>
+            </li>
+            <li class="navigation-list__item">
+              <a href="#">Services</a>
+            </li>
+            <li class="navigation-list__item">
+              <a href="#">Resume</a>
+            </li>
+            <li class="navigation-list__item">
+              <a href="#">Client</a>
+            </li>
+            <li class="navigation-list__item">
+              <a href="#">Blog</a>
+            </li>
+            <li class="navigation-list__item">
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header__button" href="#">Download CV</a>
+      </div>
+    </header>
   </body>
 </html>
