--- a/index.html
+++ b/index.html
@@ -51,8 +51,53 @@
             </li>
           </ul>
         </nav>
-        <a class="header__button" href="#">Download CV</a>
+        <a class="button" href="#">Download CV</a>
       </div>
     </header>
+    <main>
+      <section class="hero">
+        <ul class="social-list">
+          <li class="social-list__item">
+            <a href="#">
+              <svg class="social-list__icon">
+                <use href="./images/hero/symbol-defs.svg#icon-in"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a href="#">
+              <svg class="social-list__icon">
+                <use href="./images/hero/symbol-defs.svg#icon-inst"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a href="#">
+              <svg class="social-list__icon">
+                <use href="./images/hero/symbol-defs.svg#icon-be"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="hero__wrapper section">
+          <div class="hero__main-content">
+            <p class="hero__text">Welcome My Portfolio</p>
+            <h1 class="hero__title">
+              Hello, i&lsquo;m Johan Deo<br />
+              <span>Professional</span> Designer.
+            </h1>
+            <p class="hero__desc">
+              Conveniently customize proactive web services for leveraged
+              without <br />
+              continualliery aggregate fricctionle ou wellies richard.
+            </p>
+            <div class="hero__buttons-wrapper">
+              <a class="button main" href="#">Hire Me</a>
+              <a class="button second" href="#">Download CV</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
