Added about section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,71 @@
           </div>
         </div>
       </section>
+      <section class="about">
+        <div class="about__wrapper section">
+          <div class="about__img-thumb">
+            <img
+              class="about__img"
+              src="./images/about/about-background.png"
+              alt="Frame"
+            />
+          </div>
+          <div class="about__main-content">
+            <p class="about__paragraph paragraph">About me</p>
+            <h2 class="about__title title">Johan Deo</h2>
+            <p class="about__desc">
+              I'm Graphic Designer,and I'm very passionate and dedicated to my
+              work With 20 years experience as a professional Photography, I
+              have lot of acquired the skills and knowledge necessary to make
+              your project a success. I enjoy every step the Photography
+              process,from discussion and collaboration.
+            </p>
+            <ul class="personal-advantage-list">
+              <li class="personal-advantage-list__item">
+                <p class="personal-advantage-list__text">
+                  Birthday <span>15 April 1990</span>>
+                </p>
+              </li>
+              <li class="personal-advantage-list__item">
+                <p class="personal-advantage-list__text">
+                  Website <span>www.fgorman.com</span>>
+                </p>
+              </li>
+              <li class="personal-advantage-list__item">
+                <p class="personal-advantage-list__text">
+                  Phone <span>+1 650 123 4444</span>>
+                </p>
+              </li>
+              <li class="personal-advantage-list__item">
+                <p class="personal-advantage-list__text">
+                  Study <span>University of Harvard</span>>
+                </p>
+              </li>
+              <li class="personal-advantage-list__item">
+                <p class="personal-advantage-list__text">
+                  Degree <span>Master</span>
+                </p>
+              </li>
+              <li class="personal-advantage-list__item">
+                <p class="personal-advantage-list__text">
+                  Mail <span>info@biophoto.com</span>>
+                </p>
+              </li>
+              <li class="personal-advantage-list__item">
+                <p class="personal-advantage-list__text">
+                  Linkedin <span>@biophotography</span>>
+                </p>
+              </li>
+              <li class="personal-advantage-list__item">
+                <p class="personal-advantage-list__text">
+                  Freelance <span>Available</span>>
+                </p>
+              </li>
+            </ul>
+            <a class="button main" href="#">Download CV</a>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
