Added advantages section

--- a/index.html
+++ b/index.html
@@ -201,6 +201,66 @@
           </div>
         </div>
       </section>
+      <section class="advantages">
+        <div class="advantages__wrapper section">
+          <p class="advantages__paragraph paragraph">Why Choose Us</p>
+          <h2 class="advantages__title title">Our Work Services</h2>
+          <div class="advantages-list-wrapper">
+            <ul class="advantages-list">
+              <li class="advantages-list__item">
+                <h3 class="advantages-list__title graphic">Computer Graphic</h3>
+                <p class="advantages-list__desc">
+                  Conveniently and proacvenique and idene solutions easyuse
+                  enjoy collaboration...
+                </p>
+                <a class="advantages-list__btn" href="#">
+                  <svg class="advantages-list__btn-icon">
+                    <use href="./images/advantages/arrow.svg#icon-arrow"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="advantages-list__item">
+                <h3 class="advantages-list__title web-develop">
+                  Web Development
+                </h3>
+                <p class="advantages-list__desc">
+                  Conveniently and proacvenique and idene solutions easyuse
+                  enjoy collaboration...
+                </p>
+                <a class="advantages-list__btn" href="#">
+                  <svg class="advantages-list__btn-icon">
+                    <use href="./images/advantages/arrow.svg#icon-arrow"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="advantages-list__item">
+                <h3 class="advantages-list__title ui-design">UI/UX Design</h3>
+                <p class="advantages-list__desc">
+                  Conveniently and proacvenique and idene solutions easyuse
+                  enjoy collaboration...
+                </p>
+                <a class="advantages-list__btn" href="#">
+                  <svg class="advantages-list__btn-icon">
+                    <use href="./images/advantages/arrow.svg#icon-arrow"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="advantages-list__item">
+                <h3 class="advantages-list__title web-design">Web Design</h3>
+                <p class="advantages-list__desc">
+                  Conveniently and proacvenique and idene solutions easyuse
+                  enjoy collaboration...
+                </p>
+                <a class="advantages-list__btn" href="#">
+                  <svg class="advantages-list__btn-icon">
+                    <use href="./images/advantages/arrow.svg#icon-arrow"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
