--- a/index.html
+++ b/index.html
@@ -259,6 +259,60 @@
           </ul>
         </div>
       </section>
+      <section class="resume">
+        <div class="resume__wrapper section">
+          <div class="resume__main-content">
+            <p class="resume__paragraph paragraph">Resume</p>
+            <h2 class="resume__title title">Skill & Experience</h2>
+            <ul class="experience-list-name">
+              <li class="experience-list-name__item">
+                <a class="experience-list-name__button second" href="#">
+                  Design
+                </a>
+              </li>
+              <li class="experience-list-name__item">
+                <a class="experience-list-name__button main" href="#">
+                  Experience
+                </a>
+              </li>
+              <li class="experience-list-name__item">
+                <a class="experience-list-name__button main" href="#">
+                  Education
+                </a>
+              </li>
+            </ul>
+            <ul class="experience-list-stats">
+              <li class="experience-list-stats__item">
+                <h3 class="experience-list-stats__name">
+                  Adobe Aillustrator <span>90%</span>
+                </h3>
+              </li>
+              <li class="experience-list-stats__item">
+                <h3 class="experience-list-stats__name">
+                  Adobe Photoshop <span>80%</span>
+                </h3>
+              </li>
+              <li class="experience-list-stats__item">
+                <h3 class="experience-list-stats__name">
+                  Adobe After Effect <span>70%</span>
+                </h3>
+              </li>
+              <li class="experience-list-stats__item">
+                <h3 class="experience-list-stats__name">
+                  Figma <span>60%</span>
+                </h3>
+              </li>
+            </ul>
+          </div>
+          <div class="resume__img-thumb">
+            <img
+              class="resume__img"
+              src="./images/resume/resume-background.png"
+              alt="Frame"
+            />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
