--- a/index.html
+++ b/index.html
@@ -313,6 +313,65 @@
           </div>
         </div>
       </section>
+      <section class="meaning">
+        <div class="meaning__wrapper section">
+          <p class="meaning__paragraph paragraph">Testimonial</p>
+          <h2 class="meaning__title title">What Our Client Say About us.</h2>
+          <ul class="meaning-list">
+            <li class="meaning-list__item">
+              <div class="meaning-list__content-wrapper">
+                <h3 class="meaning-list__name">Dawn johnson</h3>
+                <p class="meaning-list__role">Co Founder</p>
+                <p class="meaning-list__text">
+                  Conveniently customize proactive web services fofeveraged
+                  withoutan continualliery aggregate customize proactive web
+                  services.
+                </p>
+                <img
+                  class="meaning-list__icon"
+                  src="./images/testimonial/quotes.png"
+                  alt="Quotes"
+                />
+              </div>
+              <div class="meaning-list__img-thumb"></div>
+            </li>
+            <li class="meaning-list__item">
+              <div class="meaning-list__content-wrapper">
+                <h3 class="meaning-list__name">Dawn johnson</h3>
+                <p class="meaning-list__role">Co Founder</p>
+                <p class="meaning-list__text">
+                  Conveniently customize proactive web services fofeveraged
+                  withoutan continualliery aggregate customize proactive web
+                  services.
+                </p>
+                <img
+                  class="meaning-list__icon"
+                  src="./images/testimonial/quotes.png"
+                  alt="Quotes"
+                />
+              </div>
+              <div class="meaning-list__img-thumb"></div>
+            </li>
+            <li class="meaning-list__item">
+              <div class="meaning-list__content-wrapper">
+                <h3 class="meaning-list__name">Dawn johnson</h3>
+                <p class="meaning-list__role">Co Founder</p>
+                <p class="meaning-list__text">
+                  Conveniently customize proactive web services fofeveraged
+                  withoutan continualliery aggregate customize proactive web
+                  services.
+                </p>
+                <img
+                  class="meaning-list__icon"
+                  src="./images/testimonial/quotes.png"
+                  alt="Quotes"
+                />
+              </div>
+              <div class="meaning-list__img-thumb"></div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
