--- a/index.html
+++ b/index.html
@@ -372,6 +372,110 @@
           </ul>
         </div>
       </section>
+      <section class="posts">
+        <div class="posts__wrapper section">
+          <p class="posts__paragraph paragraph">Blog post</p>
+          <h2 class="posts__title title">Our Latest Blog</h2>
+          <ul class="posts-list">
+            <li class="posts-list__item">
+              <div class="posts-list__img-thumb"></div>
+              <ul class="posts-list__info">
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use
+                      href="./images/posts/symbol-defs.svg#icon-person"
+                    ></use>
+                  </svg>
+                  <p class="posts-list__info-text">Admin</p>
+                </li>
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use
+                      href="./images/posts/symbol-defs.svg#icon-message"
+                    ></use>
+                  </svg>
+                  <p class="posts-list__info-text">25</p>
+                </li>
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use href="./images/posts/symbol-defs.svg#icon-eye"></use>
+                  </svg>
+                  <p class="posts-list__info-text">23k+ view</p>
+                </li>
+              </ul>
+              <h3 class="posts-list__name">Bankruptcy law the federal law</h3>
+              <p class="posts-list__text">
+                Conveniently innovate web services user-centric before
+                progressive architect distinctively.
+              </p>
+            </li>
+            <li class="posts-list__item">
+              <div class="posts-list__img-thumb"></div>
+              <ul class="posts-list__info">
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use
+                      href="./images/posts/symbol-defs.svg#icon-person"
+                    ></use>
+                  </svg>
+                  <p class="posts-list__info-text">Admin</p>
+                </li>
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use
+                      href="./images/posts/symbol-defs.svg#icon-message"
+                    ></use>
+                  </svg>
+                  <p class="posts-list__info-text">25</p>
+                </li>
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use href="./images/posts/symbol-defs.svg#icon-eye"></use>
+                  </svg>
+                  <p class="posts-list__info-text">23k+ view</p>
+                </li>
+              </ul>
+              <h3 class="posts-list__name">Bankruptcy law the federal law</h3>
+              <p class="posts-list__text">
+                Conveniently innovate web services user-centric before
+                progressive architect distinctively.
+              </p>
+            </li>
+            <li class="posts-list__item">
+              <div class="posts-list__img-thumb"></div>
+              <ul class="posts-list__info">
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use
+                      href="./images/posts/symbol-defs.svg#icon-person"
+                    ></use>
+                  </svg>
+                  <p class="posts-list__info-text">Admin</p>
+                </li>
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use
+                      href="./images/posts/symbol-defs.svg#icon-message"
+                    ></use>
+                  </svg>
+                  <p class="posts-list__info-text">25</p>
+                </li>
+                <li class="posts-list__info-item">
+                  <svg class="posts-list__icon">
+                    <use href="./images/posts/symbol-defs.svg#icon-eye"></use>
+                  </svg>
+                  <p class="posts-list__info-text">23k+ view</p>
+                </li>
+              </ul>
+              <h3 class="posts-list__name">Bankruptcy law the federal law</h3>
+              <p class="posts-list__text">
+                Conveniently innovate web services user-centric before
+                progressive architect distinctively.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
