Added subscribe section with tablet responsive

--- a/index.html
+++ b/index.html
@@ -476,6 +476,22 @@
           </ul>
         </div>
       </section>
+      <section class="subscribe">
+        <div class="subscribe__wrapper section">
+          <div class="subscribe__main-content-wrapper">
+            <h2 class="visually-hidden">Subscribe us</h2>
+            <p class="subscribe__paragraph">Subscribe Now</p>
+            <p class="subscribe__text">Get My Newsletter</p>
+            <p class="subscribe__desc">
+              Get latest news, updates, tips and trics in your inbox
+            </p>
+          </div>
+          <form class="subscribe__form">
+            <input type="mail" placeholder="Enter your Email" required />
+            <button class="subscribe__btn main">Subscribe</button>
+          </form>
+        </div>
+      </section>
     </main>
   </body>
 </html>
