Added contact section with responsive map

--- a/index.html
+++ b/index.html
@@ -487,9 +487,96 @@
             </p>
           </div>
           <form class="subscribe__form">
-            <input type="mail" placeholder="Enter your Email" required />
+            <input type="email" placeholder="Enter your Email" required />
             <button class="subscribe__btn main">Subscribe</button>
           </form>
+        </div>
+      </section>
+      <section class="contact">
+        <div class="contact__wrapper section">
+          <p class="contact__paragraph paragraph">Contact</p>
+          <h2 class="contact__title title">Get in Touch</h2>
+          <div class="contact__content-wrapper">
+            <div class="contact__main-content-wrapper">
+              <ul class="contacts-list">
+                <li class="contacts-list__card">
+                  <div class="contacts-list__icon-thumb">
+                    <img
+                      class="contacts-list__icon"
+                      src="./images/contact/phone.png"
+                      alt="Phone icon"
+                    />
+                  </div>
+                  <div class="contacts-list__text-wrapper">
+                    <h3 class="contacts-list__title">Phone number</h3>
+                    <p class="contacts-list__text">
+                      +8801284593, 01239-420007 02-9611936
+                    </p>
+                  </div>
+                </li>
+                <li class="contacts-list__card">
+                  <div class="contacts-list__icon-thumb">
+                    <img
+                      class="contacts-list__icon"
+                      src="./images/contact/email.png"
+                      alt="Phone icon"
+                    />
+                  </div>
+                  <div class="contacts-list__text-wrapper">
+                    <h3 class="contacts-list__title">Email Address</h3>
+                    <p class="contacts-list__text">
+                      sahjahansagor2020@.com sahjahansagor3020@.com
+                    </p>
+                  </div>
+                </li>
+                <li class="contacts-list__card">
+                  <div class="contacts-list__icon-thumb">
+                    <img
+                      class="contacts-list__icon"
+                      src="./images/contact/pin.png"
+                      alt="Phone icon"
+                    />
+                  </div>
+                  <div class="contacts-list__text-wrapper">
+                    <h3 class="contacts-list__title">Office address</h3>
+                    <p class="contacts-list__text">
+                      Suite 1307, Tropical Center 218 New Elephant Road,
+                    </p>
+                  </div>
+                </li>
+              </ul>
+              <form class="contact-form">
+                <h3 class="contact-form__title">Send Message</h3>
+                <div class="contact-form__main-inputs">
+                  <input
+                    class="contact-form__name-input"
+                    type="text"
+                    placeholder="Your Name"
+                    required
+                  />
+                  <input
+                    class="contact-form__email-input"
+                    type="email"
+                    placeholder="Your Email"
+                    required
+                  />
+                </div>
+                <textarea
+                  class="contact-form__message-textarea"
+                  name="message"
+                  placeholder="Your Message"
+                ></textarea>
+                <button class="contact-form__button main">
+                  Submit message
+                </button>
+              </form>
+            </div>
+          </div>
+          <img
+            class="contact__map-img"
+            src="./images/contact/map.png"
+            alt="Location on map"
+          />
         </div>
       </section>
     </main>
