Added footer with styling

--- a/index.html
+++ b/index.html
@@ -580,5 +580,12 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__wrapper section">
+        <p class="footer__text">
+          All Right Reserved. Designed and Developed by LabArtisan
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
