--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <body>
     <header class="header">
       <div class="header__wrapper">
+        <img
+          class="burger"
+          src="./images/header/burger-menu.svg"
+          alt="Burger menu icon"
+        />
         <nav>
           <ul class="navigation-list">
             <li class="navigation-list__item">
@@ -56,6 +61,24 @@
     </header>
     <main>
       <section class="hero">
+        <div class="hero__wrapper section">
+          <div class="hero__main-content">
+            <p class="hero__text">Welcome My Portfolio</p>
+            <h1 class="hero__title">
+              Hello, i&lsquo;m Johan Deo<br />
+              <span>Professional</span> Designer.
+            </h1>
+            <p class="hero__desc">
+              Conveniently customize proactive web services for leveraged
+              without <br />
+              continualliery aggregate fricctionle ou wellies richard.
+            </p>
+            <div class="hero__buttons-wrapper">
+              <a class="button main" href="#">Hire Me</a>
+              <a class="button second" href="#">Download CV</a>
+            </div>
+          </div>
+        </div>
         <ul class="social-list">
           <li class="social-list__item">
             <a href="#">
@@ -79,24 +102,6 @@
             </a>
           </li>
         </ul>
-        <div class="hero__wrapper section">
-          <div class="hero__main-content">
-            <p class="hero__text">Welcome My Portfolio</p>
-            <h1 class="hero__title">
-              Hello, i&lsquo;m Johan Deo<br />
-              <span>Professional</span> Designer.
-            </h1>
-            <p class="hero__desc">
-              Conveniently customize proactive web services for leveraged
-              without <br />
-              continualliery aggregate fricctionle ou wellies richard.
-            </p>
-            <div class="hero__buttons-wrapper">
-              <a class="button main" href="#">Hire Me</a>
-              <a class="button second" href="#">Download CV</a>
-            </div>
-          </div>
-        </div>
       </section>
       <section class="about">
         <div class="about__wrapper section">
